Module 2/m02a06distance-handout/grading/2024-09-09-14-52-12/compile.err
Distance.java:12: error: ')' or ',' expected
        System.out.println("The distance is " function);
                                             ^
Distance.java:12: error: not a statement
        System.out.println("The distance is " function);
                                              ^
Distance.java:12: error: ';' expected
        System.out.println("The distance is " function);
                                                      ^
3 errors
